[package]
name = "stm32wl55jc-embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = "0.3.2"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"

embassy-stm32 = { version = "0.1.0", features = ["defmt", "time-driver-any", "stm32wl55jc-cm4", "memory-x", "unstable-pac", "exti"] }
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "d8459685fd1e53a0fb57f44d950e0bc4f450c5f7" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "d8459685fd1e53a0fb57f44d950e0bc4f450c5f7" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "d8459685fd1e53a0fb57f44d950e0bc4f450c5f7" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
debug = true
